--- a/simple-blog.html
+++ b/simple-blog.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>cncntr8</title>
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
     <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
 
 </head>
@@ -14,79 +15,58 @@
 
     <div class="top-bar">
         <div class="top-bar-left">
-            <ul class="menu">
-                <li class="menu-text">Blog</li>
-                <li><a href="#">One</a>
-                </li>
-                <li><a href="#">Two</a>
-                </li>
-                <li><a href="#">Three</a>
-                </li>
-            </ul>
+            <h1>Cncntr8</h1>
+        </div>
+        <div class="top-bar-right">
+            <h3>Average Class Concentration</h3>
+            <div class="progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
+			  				<span class="progress-meter" style="width: 25%">
+			    				<p class="progress-meter-text">25%</p>
+			  				</span>
+						</div>
+
         </div>
     </div>
 
-    <div class="callout large primary">
-        <div class="row column text-center">
-            <h1>Our Blog</h1>
-            <h2 class="subheader">Such a Simple Blog Layout</h2>
-        </div>
-    </div>
+    <div class="large-4 medium-4 small-4 columns">
+            <div class="primary callout">
+              <h5>Student #1</h5>
+			  <p>Paying Attention</p>
+			  
+			   <div class="progress success" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="75 percent" aria-valuemax="100">
+			  				<span class="progress-meter" style="width: 75%">
+			    				<p class="progress-meter-text">75%</p>
+			  				</span>
+						</div>
+			        </div>
+            </div>
 
-    <div class="row medium-8 large-7 columns">
-        <div class="blog-post">
-            <h3>Awesome blog post title <small>3/6/2016</small></h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-            <div class="callout">
-                <ul class="menu simple">
-                    <li><a href="#">Author: Mike Mikers</a>
-                    </li>
-                    <li><a href="#">Comments: 3</a>
-                    </li>
-                </ul>
+    <div class="large-4 medium-4 small-4 columns">
+            <div class="primary callout">
+              <h5>Student #2</h5>
+			  <p>Dozing Off</p>
+
+			   <div class="progress warning" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="50 percent" aria-valuemax="100">
+			  				<span class="progress-meter" style="width: 50%">
+			    				<p class="progress-meter-text">50%</p>
+			  				</span>
+						</div>
+			        </div>
             </div>
-        </div>
-        <div class="blog-post">
-            <h3>Awesome blog post title <small>3/6/2016</small></h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-            <div class="callout">
-                <ul class="menu simple">
-                    <li><a href="#">Author: Mike Mikers</a>
-                    </li>
-                    <li><a href="#">Comments: 3</a>
-                    </li>
-                </ul>
+
+    <div class="large-4 medium-4 small-4 columns">
+            <div class="primary callout">
+              <h5>Student #3</h5>
+			  <p>Sleeping</p>
+
+			   <div class="progress alert" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
+			  				<span class="progress-meter" style="width: 25%">
+			    				<p class="progress-meter-text">25%</p>
+			  				</span>
+						</div>
+			        </div>
             </div>
-        </div>
-        <div class="blog-post">
-            <h3>Awesome blog post title <small>3/6/2016</small></h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-            <div class="callout">
-                <ul class="menu simple">
-                    <li><a href="#">Author: Mike Mikers</a>
-                    </li>
-                    <li><a href="#">Comments: 3</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="blog-post">
-            <h3>Awesome blog post title <small>3/6/2016</small></h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
-            <div class="callout">
-                <ul class="menu simple">
-                    <li><a href="#">Author: Mike Mikers</a>
-                    </li>
-                    <li><a href="#">Comments: 3</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script>
