--- a/index.html
+++ b/index.html
@@ -19,50 +19,56 @@
         </div>
         <div class="top-bar-right">
             <h3>Average Class Concentration Level</h3>
-            <div class="progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+            <p class="text">Concentration</p>
+            <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
 			  				<span class="progress-meter" style="width: 25%">
 			    				<p class="progress-meter-text">25%</p>
 			  				</span>
 						</div>
+            <p class="text">Concentration</p>
+            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                            <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+                        </div>
 
         </div>
     </div>
         <div class="large-4 medium-4 small-4 columns">
             <div class="primary callout">
               <h5>Student #1</h5>
-			  <p>Paying Attention</p>
+			  <p class="text">Concentration</p>
 			  
-			   <div class="progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-			  				<span class="progress-meter" style="width: 75%">
-			    				<p class="progress-meter-text">75%</p>
-			  				</span>
-						</div>
+			     <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                            <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+                        </div>
+            <p class="text">Concentration</p>
+            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                            <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+                        </div>
 			        </div>
             </div>
 
     <div class="large-4 medium-4 small-4 columns">
             <div class="primary callout">
               <h5>Student #2</h5>
-			  <p>Dozing Off</p>
+                <p class="text">Concentration</p>
+			     <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                            <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+                        </div>
 
-			   <div class="progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-			  				<span class="progress-meter" style="width: 50%">
-			    				<p class="progress-meter-text">50%</p>
-			  				</span>
-						</div>
-			        </div>
-            </div>
-
-    <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <h5>Student #3</h5>
-			  <p>Sleeping</p>
-
-			   <div class="progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-			  				<span class="progress-meter" style="width: 25%">
-			    				<p class="progress-meter-text">25%</p>
-			  				</span>
-						</div>
+            <p class="text">Concentration</p>
+            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                            <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+                        </div>
 			        </div>
             </div>
 
