--- a/index.html
+++ b/index.html
@@ -21,60 +21,41 @@
             <h3>Average Class Concentration Level</h3>
             <p class="text">Concentration</p>
             <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-			  				<span class="progress-meter" style="width: 25%">
-			    				<p class="progress-meter-text">25%</p>
-			  				</span>
-						</div>
-            <p class="text">Concentration</p>
-            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                            <span class="progress-meter" style="width: 25%">
+                <span class="progress-meter" style="width: 25%">
                                 <p class="progress-meter-text">25%</p>
                             </span>
-                        </div>
+            </div>
+            <p class="text">Mellowness</p>
+            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+            </div>
 
         </div>
     </div>
-        <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <h5>Student #1</h5>
-			  <p class="text">Concentration</p>
-			  
-			     <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                            <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-                        </div>
-            <p class="text">Concentration</p>
-            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                            <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-                        </div>
-			        </div>
-            </div>
-
     <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <h5>Student #2</h5>
-                <p class="text">Concentration</p>
-			     <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                            <span class="progress-meter" style="width: 25%">
+        <div class="primary callout">
+            <h5>Student #1</h5>
+            <p class="text">Concentration<p>
+            <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                <span class="progress-meter" style="width: 25%">
                                 <p class="progress-meter-text">25%</p>
                             </span>
-                        </div>
-
-            <p class="text">Concentration</p>
-            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                            <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-                        </div>
-			        </div>
             </div>
+            
+            <p class="text">Mellowness</p>
+            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
+                <span class="progress-meter" style="width: 25%">
+                                <p class="progress-meter-text">25%</p>
+                            </span>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/vendor/foundation.js"></script>
     <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
 </body>
 
