--- a/index.html
+++ b/index.html
@@ -1,62 +1,60 @@
 <!doctype html>
 <html class="no-js" lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cncntr8</title>
-    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
     <link href='http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css' rel='stylesheet' type='text/css'>
-
-</head>
-
-<body>
-
-    <div class="top-bar">
-        <div class="top-bar-left">
-            <h1>Cncntr8</h1>
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="images/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="cncntr8"/>
+    <meta name="msapplication-TileColor" content="#2199E8" />
+    <meta name="msapplication-TileImage" content="images/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="images/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="images/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="images/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="images/mstile-310x310.png" />
+  </head>
+  <body>
+    <div id="header">
+      <div class="float-left">
+        <h1 id="classname"></h1>
+      </div>
+      <div id="average-box" class="float-right">
+        <h3>Average Class Concentration Level</h3>
+        <p class="text">Concentration</p>
+        <div class="progress" id="average-concentration" role="progressbar">
+          <span class="progress-meter" style="width: 50%">
+            <p class="progress-meter-text">50%</p>
+          </span>
         </div>
-        <div class="top-bar-right">
-            <h3>Average Class Concentration Level</h3>
-            <p class="text">Concentration</p>
-            <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-            </div>
-            <p class="text">Mellowness</p>
-            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-            </div>
-
+        <p class="text">Mellowness</p>
+        <div class="progress" id="average-mellowness" role="progressbar">
+          <span class="progress-meter" style="width: 50%">
+            <p class="progress-meter-text">50%</p>
+          </span>
         </div>
+      </div>
     </div>
-    <div class="large-4 medium-4 small-4 columns">
-        <div class="primary callout">
-            <h5>Student #1</h5>
-            <p class="text">Concentration<p>
-            <div class="progress" id="concentration" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-            </div>
-            
-            <p class="text">Mellowness</p>
-            <div class="progress" id="mellowness" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="0 percent" aria-valuemax="100">
-                <span class="progress-meter" style="width: 25%">
-                                <p class="progress-meter-text">25%</p>
-                            </span>
-            </div>
-        </div>
+    <div id="users" class="row small-up-1 medium-up-2 large-up-3">
     </div>
-
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.1.3/math.min.js"></script>
     <script src="js/vendor/foundation.js"></script>
-    <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
-</body>
-
+    <script src="js/app.js"></script>
+  </body>
 </html>
